fix spacing utility mixins

--- a/src/styles/00_settings/_globals.setting.scss
+++ b/src/styles/00_settings/_globals.setting.scss
@@ -10,7 +10,7 @@ $font-medium: 1.8rem;
 $font-large: 22rem;
 
 $sides: 'top', 'right', 'left', 'bottom';
-$spacings: 5px, 10px, 15px, 20px, 25px, 30px, 40px, 50px, 60px, 70px, 80px, 90px, 100px;
+$spacings: 5, 10, 15, 20, 25, 30, 40, 50, 60, 70, 80, 90, 100;
 
 $font-colors: (
   black: $color-black,
